@@ -2,14 +2,15 @@ package org.opendedup.sdfs.filestore;
 
 import java.io.File;
 
+
 import java.io.IOException;
 import java.util.Arrays;
 
 import org.opendedup.collections.AbstractHashesMap;
 import org.opendedup.collections.HashtableFullException;
+import org.opendedup.hashing.HashFunctionPool;
 import org.opendedup.sdfs.Main;
 import org.opendedup.sdfs.servers.HashChunkService;
-import org.opendedup.util.HashFunctions;
 import org.opendedup.util.SDFSLogger;
 import org.opendedup.util.StringUtils;
 
@@ -58,7 +59,7 @@ public class HashStore {
 	static {
 		blankData = new byte[Main.chunkStorePageSize];
 		try {
-			blankHash = HashFunctions.getTigerHashBytes(blankData);
+			blankHash = HashFunctionPool.getHashEngine().getHash(blankData);
 		} catch (Exception e) {
 			SDFSLogger.getLog().fatal("unable to hash blank hash", e);
 		}
